--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,3 +1,24 @@
 body{
     background: #BDBDBD;
 }
+
+    .nav-link
+    {
+        color: white;
+    }
+
+    .container-fluid
+    {
+        padding: 0%;
+        
+    }
+
+    .img-700-400 {
+    width: 700px;
+    height: 400px;
+    object-fit: cover;
+}
+
+.card-title{
+    color: aqua;
+}
