--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,3 +1,47 @@
-body{
-    background: #BDBDBD;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.container-img-text {
+    padding-top: 140px;
+    padding-bottom: 80px;
+}
+
+
+.left-text h1 {
+    font-size: 36px;
+    color: #333;
+}
+
+.left-text .difuminado {
+    font-weight: 300;
+    color: #777;
+}
+
+.left-text p {
+    font-size: 16px;
+    color: #555;
+    line-height: 1.6;
+    width: 90%;
+}
+
+
+.right-img-container {
+    text-align: right;
+    padding-right: 0;
+}
+
+
+.img-WW {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    display: block;
+    margin-left: 0px;
+    border-top-left-radius: 300px;
+    border-top-right-radius: 300px;
+    border-bottom-left-radius: 300px;
+    border-bottom-right-radius: 300px;
+    transform: translateY(75px);
 }
